Added body and paragraph

--- a/facebook.html
+++ b/facebook.html
@@ -2,5 +2,9 @@
 <html>
 <head>
 <title>facebook</title>
+<body>
+<h1>WELCOME TO FACEBOOK</h1>
+<p>Facebook is a very popular social media platform which connects many people around the world.</p>
+</body>
 </head>
 </html>
