--- a/facebook.html
+++ b/facebook.html
@@ -5,6 +5,7 @@
 <body>
 <h1>WELCOME TO FACEBOOK</h1>
 <p>Facebook is a very popular social media platform which connects many people around the world.</p>
+<h2>Uses of facebook</h2>
 </body>
 </head>
 </html>
