Added 2nd paragraph

--- a/facebook.html
+++ b/facebook.html
@@ -6,6 +6,7 @@
 <h1>WELCOME TO FACEBOOK</h1>
 <p>Facebook is a very popular social media platform which connects many people around the world.</p>
 <h2>Uses of facebook</h2>
+<p>Helps to connect people worldwide</p>
 </body>
 </head>
 </html>
