Facebook icon added on html file

--- a/facebook.html
+++ b/facebook.html
@@ -3,10 +3,13 @@
 <head>
 <title>facebook</title>
 <body>
+<main>
 <h1>WELCOME TO FACEBOOK</h1>
 <p>Facebook is a very popular social media platform which connects many people around the world.</p>
 <h2>Uses of facebook</h2>
 <p>Helps to connect people worldwide</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQKrFhY-ljA-u7J5IMWeTv8zmpBx4PP9nQMw&s">
+</main>
 </body>
 </head>
 </html>
